fix responsive style of our new charts, stop giving massive space on mobile, also prepare for more dynamic sizing with some test code

--- a/templates/default/css/style.css
+++ b/templates/default/css/style.css
@@ -1457,6 +1457,7 @@ div.announce:nth-of-type(even) {background: #99CCFF; margin-bottom: 7px; color: 
 .dark .vote_done {color: white; background-color: green;}
 .dark #wrap strong {color: black;}
 /* GOL Charts */
+.golgraph{display: block; margin-left:auto; margin-right:auto;}
 .dark .golsvg_header {fill: #515151}
 .golsvg_title {fill: white;}
 .dark .golsvg_background {fill: #000000}
